[package]
name = "libavro-sys"
version = "0.1.0"
edition = "2018"
links = "foo"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[dev-dependencies]
chrono = { version = "0.4.19", features = ["serde"] }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"